@@ -85,6 +85,7 @@ following names for their contribution to the product.
 * Daniel Arnold
 * Denny Vrandecic
 * Derk-Jan Hartman
+* DieBuche
 * FunPika
 * Ireas
 * Jaska Zedlik
